# 42_music-room

./: .gitignore  .gitleaksignore  Makefile
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  secret-scan.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: .gitignore  Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/: error_handlers.py
api/app/api/v1/: router.py
api/app/core/: config.py  logging.py
api/app/middleware/: action_logging.py
api/app/observability/: metrics.py
api/tests/vitrolify_bruno/: Apply collaborative playlist edit operation.yml  Basic error test.yml  Create event.yml  Get Metrcis.yml  Get current ranked queue.yml  Grant delegated playback control for a device.yml  Initial root request.yml  Revoke delegation immediately.yml  Toggle vote for a track entry.yml  WebSocket channel endpoint (documented as upgrade route).yml  opencollection.yml
api/tests/vitrolify_bruno/environments/: vitrolify.yml
frontend/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend/app/: _layout.tsx
frontend/app/(auth)/: index.tsx  signup.tsx
frontend/app/(inside)/: home.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx
frontend/src/: styles.ts
frontend/src/components/: EmailSignIn.tsx  EmailSignUp.tsx  LoginButton.tsx  LogoutButton.tsx  auth-screen.tsx
frontend/src/lib/: firebase.ts  (+2 more)
scripts/: validate_openapi.sh
specs/001-realtime-collab-playlists/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
